@@ -4192,4 +4192,6 @@ backtracking verbs. --/
 
 /(?R-:(?</
 
+/(?1){3918}(((((0(\k'R'))))(?J)(?'R'(?'R'\3){99})))/I
+
 /-- End of testinput2 --/
